<resources>
    <string name="app_name">TestCRM</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_welcome"><![CDATA[Hello & Welcome]]></string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="patronymic">patronymic</string>
    <string name="telegram">telegram</string>
    <string name="e_mail">e-mail</string>
    <string name="password">password</string>
    <string name="repeat_password">repeat password</string>
    <string name="log_in_with_telegram">Log in with Telegram</string>
    <string name="profile">Profile</string>
    <string name="calendar">Calendar</string>
    <string name="students">Students</string>
    <string name="surveys">Surveys</string>
    <string name="teachers_profile">Teacher\'s profile</string>
    <string name="evgeniy">Jekis</string>
    <string name="osipov">Osipov</string>
    <string name="vadimovich">Vadimovich</string>
    <string name="telegram_capitilize">Telegram:</string>
    <string name="email_colomn">Email:</string>
    <string name="save">Save</string>
    <string name="count_of_students">Count of students:</string>
    <string name="choose_student">choose a student</string>
    <string name="choose_subject">choose a subject</string>
    <string name="choose_level">choose a level</string>
    <string name="phone_number">phone number</string>
    <string name="date">date</string>
    <string name="grade">grade</string>
    <string name="description">description</string>
    <string name="check_your_level">check your level</string>
    <string name="rate_the_course">rate the course</string>
    <string name="enter_survey_name">name of survey</string>
    <string name="link_on_survey">link on survey</string>
    <string name="statistic">Statistic</string>
    <string name="count_of_students_capitalize">Count of students</string>
    <string name="count_of_lessons">Count of lessons</string>
    <string name="_4_5">4,5</string>
    <string name="_87">87</string>
    <string name="jekis">\@jekispank</string>
    <string name="jekis_google_com">Jekis@google.com</string>
    <string name="_25">25</string>
</resources>