<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_2"
    tools:context=".presentation.profile.rootStudent.AddStudentFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="624dp"
        android:layout_margin="25dp"
        android:background="@drawable/rectangle_welcomescreen"
        android:elevation="10dp">

        <EditText
            android:id="@+id/enter_first_name"
            android:layout_width="266dp"
            android:layout_height="58dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:background="@drawable/rectangle_enter_data"
            android:drawableStart="@drawable/ic_person_blue"
            android:drawablePadding="10dp"
            android:elevation="5dp"
            android:hint="@string/first_name"
            android:padding="10dp"
            android:textColorHint="#AB0193FE" />

        <EditText
            android:id="@+id/enter_last_name"
            android:layout_width="266dp"
            android:layout_height="58dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:background="@drawable/rectangle_enter_data"
            android:drawableStart="@drawable/ic_person_blue"
            android:drawablePadding="10dp"
            android:elevation="5dp"
            android:hint="@string/last_name"
            android:padding="10dp"
            android:textColorHint="#AB0193FE" />

        <EditText
            android:id="@+id/enter_telegram"
            android:layout_width="266dp"
            android:layout_height="58dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:background="@drawable/rectangle_enter_data"
            android:drawableStart="@drawable/ic_telegram_blue"
            android:drawablePadding="10dp"
            android:elevation="5dp"
            android:hint="@string/telegram"
            android:padding="10dp"
            android:textColorHint="#AB0193FE" />

        <EditText
            android:id="@+id/enter_phone_number"
            android:layout_width="266dp"
            android:layout_height="58dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:background="@drawable/rectangle_enter_data"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="10dp"
            android:elevation="5dp"
            android:hint="@string/phone_number"
            android:padding="10dp"
            android:textColorHint="#AB0193FE" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_add_student"
            android:layout_width="266dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="25dp"
            android:background="@drawable/rectangle_bt_welcomescreen"
            android:fontFamily="@font/inter_medium"
            android:text="@string/save"
            android:textSize="16sp" />

    </LinearLayout>

</FrameLayout>