<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_2"
    tools:context=".presentation.SignInFragment">

    <TextView
        android:id="@+id/textView2"
        style="@style/MyTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/sign_in_rectangle"
        android:layout_width="360dp"
        android:layout_height="320dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rectangle_welcomescreen"
        android:elevation="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/log_in_with_telegram"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:backgroundTint="#0193FE"
            android:drawableLeft="@drawable/ic_telegram_white"
            android:drawablePadding="5dp"
            android:text="@string/log_in_with_telegram"
            app:cornerRadius="10dp" />

        <EditText
            android:id="@+id/enter_email"
            android:layout_width="266dp"
            android:layout_height="58dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="25dp"
            android:background="@drawable/rectangle_enter_data"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:elevation="5dp"
            android:hint="@string/e_mail"
            android:padding="10dp"
            android:textColorHint="@color/hint_blue" />

        <EditText
            android:id="@+id/enter_password"
            android:layout_width="266dp"
            android:layout_height="58dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@drawable/rectangle_enter_data"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="10dp"
            android:elevation="5dp"
            android:hint="@string/password"
            android:padding="10dp"
            android:textColorHint="@color/hint_blue" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_sign_in"
        android:layout_width="266dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:background="@drawable/rectangle_bt_welcomescreen"
        android:backgroundTint="#DF0193FE"
        android:text="@string/sign_in"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_rectangle"
        app:layout_constraintVertical_bias="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>