<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_2"
    tools:context=".presentation.profile.rootSurveys.AddSurveyFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/rectangle_welcomescreen"
        android:elevation="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.235">

        <EditText
            android:id="@+id/survey_name"
            android:layout_width="266dp"
            android:layout_height="58dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:background="@drawable/rectangle_enter_data"
            android:drawableStart="@drawable/ic_desc"
            android:drawablePadding="10dp"
            android:elevation="5dp"
            android:hint="@string/enter_survey_name"
            android:padding="10dp"
            android:textColorHint="#AB0193FE" />

        <EditText
            android:id="@+id/survey_link"
            android:layout_width="266dp"
            android:layout_height="58dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:background="@drawable/rectangle_enter_data"
            android:drawableStart="@drawable/ic_desc"
            android:drawablePadding="10dp"
            android:elevation="5dp"
            android:hint="@string/link_on_survey"
            android:padding="10dp"
            android:textColorHint="#AB0193FE" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_add_survey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:background="@drawable/rectangle_bt_welcomescreen"
        android:fontFamily="@font/inter_medium"
        android:text="@string/save"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>